chore: remove legacy agent scaffolding and archived suites